# ACE_V4

./: .coderabbit.yaml  .dockerignore  .env  .env.development  .env.example  .env.production  .gitignore  .railwayignore  .vercelignore  CODE_REVIEW.md  DEMO_RUNBOOK.md  Dockerfile  E2E_TEST_REPORT.md  Frontend Backend Architecture Help.docx  IMPLEMENTATION_SUMMARY.md  MANUAL_QA_GOLDEN_RUN.md  MCP_SETUP.md  Meridian – Data Intelligence Platform.docx  Meridian – Data Intelligence Platform1.docx  Meridian – Data Intelligence Platform2.docx  PHASE_0_README.md  PHASE_III_EVIDENCE_LAB_COMPLETE.md  PHASE_II_NARRATIVE_COMPLETE.md  PHASE_IV_INTEGRATION_COMPLETE.md  PIPELINE_STATUS_IMPROVEMENTS.md  Procfile  README.md  RELEASE_NOTES_RC.md  THREE_PANEL_CANVAS_CONTINUITY.md  THREE_PANEL_CANVAS_TASKS.md  THREE_PANEL_CANVAS_WALKTHROUGH.md  check_railway.cjs  codex_one_hour_safety_verification.md  codex_timebox_expectations.md  docker-compose.yml  find_backend.cjs  index.html  intent.json  nixpacks.toml  package-lock.json  (+26 more)
backend/: .gitignore  IMPLEMENTATION_SUMMARY.md  PHASE_ONE_IMPLEMENTATION.md  README.md  ace_v3_entry.py  check_anomalies.py  check_clusters.py  check_import.py  check_new_state.py  orchestrator.py  prepare_banking_data.py  pyproject.toml  pytest.ini  requirements.txt  run_full_chain.py  run_manual.py  start_server.bat  test_server.py  triggers.json  verify_server.py
backend/agents/: data_typing.py  data_validation.py  deep_insight.py  dot_connector.py  executive_narrator.py  expositor.py  fabricator.py  hypothesis_engine.py  interpreter.py  overseer.py  personas.py  (+12 more)
(+1391 files in other folders)
